# varjis

./: .gitignore  README.md  Untitled.ipynb  ai.py  main.py  parsing.py  pyproject.toml  settings.json  soundbox.py  testing.py  tools.py  utils.py  widgets.py
src/varjis/: __init__.py
