[project]
name = "varjis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8.2",
    "flet>=0.23.2",
    "wikipedia",
    "duckduckgo-search",
    "together>=1.2.7",
    "boto3>=1.35.5",
    "sympy>=1.13.2",
    "pyaudio>=0.2.14",
    "markdowner",
    "setuptools>=73.0.1",
    "soundfile>=0.12.1",
    "speechrecognition>=3.10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "maturin>=1.7.1",
]

[tool.uv.sources]
markdowner = { path = "markdowner/target/wheels/markdowner-0.1.0-cp312-cp312-linux_x86_64.whl" }
